Issue #SB-21130 fix: Fixed download button is not visible in qr scanned result screen

--- a/src/assets/styles/themeable.scss
+++ b/src/assets/styles/themeable.scss
@@ -1480,4 +1480,13 @@ html[data-theme="JOYFUL"]{
     }
   }
 
+app-qrcoderesult{
+  .download-info{
+    color: #0D7DFC !important;
+  }
+  button{
+    box-shadow: none !important;
+  }
+}
+
 }
